--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ group = 'synapticloop'
 archivesBaseName = 'scaleway-java-api'
 description = """A java api for the scaleway service"""
 
-version = '0.9.1'
+version = '0.9.2'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
@@ -62,6 +62,10 @@ configurations.all {
 				}
 		}
 	}
+}
+
+copyrightr {
+	dryRun = false;
 }
 /*
  * COBERTURA
